--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,13 +3,10 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" charset=UTF-8 />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Add Questionnaire</title>
+    <title>Select endpoint</title>
 </head>
 <body>
-    <h1>Add New Questionnaire</h1>
-    <form method="POST" action="/addQuestionnaire">
-        <input type="text" name="name" placeholder="Questionnaire name">
-        <input type="submit">Add Questionnaire</input>
-    </form>
+    <a href="addQuestionnaire.html">Add Questionnaire</a>
+    <a href="addQuestion.html">Add Question</a>
 </body>
 </html>
