--- a/src/main/resources/templates/addQuestionnaire.html
+++ b/src/main/resources/templates/addQuestionnaire.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Add New Questionnaire</h1>
     <form method="POST" action="/addQuestionnaire">
-        <input type="text" name="name" placeholder="Questionnaire name">
-        <input type="submit">Add Questionnaire</input>
+        <input type="text" id="name" placeholder="Questionnaire name" />
+        <input type="submit" value="Add Questionnaire" />
     </form>
 </body>
 </html>
