--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,10 @@
     <title>Select endpoint</title>
 </head>
 <body>
-    <a href="addQuestionnaire.html">Add Questionnaire</a>
-    <a href="addQuestion.html">Add Question</a>
+    <p>Select endpoint:</p>
+    <br />
+    <a href="addQuestionnaire">Add Questionnaire</a>
+    <br />
+    <a href="addQuestion">Add Question</a>
 </body>
 </html>
