--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,5 +11,7 @@
     <a href="addQuestionnaire">Add Questionnaire</a>
     <br />
     <a href="addQuestion">Add Question</a>
+    <br />
+    <a href="h2-console">h2-console</a>
 </body>
 </html>
