--- a/src/main/resources/templates/addQuestionnaire.html
+++ b/src/main/resources/templates/addQuestionnaire.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Add New Questionnaire</h1>
-    <form method="POST" action="/addQuestionnaire">
-        <input type="text" id="name" placeholder="Questionnaire name" />
+    <form method="GET" action="/addQuestionnaire">
+        <input type="text" name="name" placeholder="Questionnaire name" />
         <input type="submit" value="Add Questionnaire" />
     </form>
 </body>
