--- a/src/main/resources/templates/addQuestionnaire.html
+++ b/src/main/resources/templates/addQuestionnaire.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Add New Questionnaire</h1>
-    <form method="GET" action="/addQuestionnaire">
+    <form method="POST" action="/saveQuestionnaire">
         <input type="text" name="name" placeholder="Questionnaire name" />
         <input type="submit" value="Add Questionnaire" />
     </form>
