--- a/src/main/resources/templates/addQuestionnaire.html
+++ b/src/main/resources/templates/addQuestionnaire.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
+
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" charset=UTF-8 />
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Add Questionnaire</title>
 </head>
+
 <body>
     <h1>Add New Questionnaire</h1>
     <form method="POST" action="/addQuestionnaire">
-        <input type="text" id="name" placeholder="Questionnaire name" />
-        <input type="submit" value="Add Questionnaire" />
+        <input type="text" name="name" placeholder="Questionnaire Name" required />
+        <input type="submit" value="Save" />
     </form>
+    <form action="/index" method="get">
+        <button type="submit">Back</button>
+    </form>
+
 </body>
+
 </html>
